--- a/index.html
+++ b/index.html
@@ -376,6 +376,15 @@
         .notification-body { font-size: 0.9rem; line-height: 1.5; color: var(--text-primary); }
         .notification-footer { font-size: 0.75rem; opacity: 0.6; text-align: right; margin-top: 0.75rem; }
 
+        /* NEW Keylogger Card Styles */
+        .keylog-list { display: flex; flex-direction: column; gap: 1rem; }
+        .keylog-card { background-color: var(--secondary-dark); padding: 1rem; border-radius: 8px; }
+        .keylog-header { display: flex; align-items: center; gap: 12px; margin-bottom: 0.75rem; }
+        .keylog-icon { width: 24px; height: 24px; flex-shrink: 0; color: var(--accent-orange); }
+        .keylog-action { font-weight: 600; color: #fff; }
+        .keylog-text { font-size: 0.95rem; line-height: 1.5; color: var(--text-primary); word-break: break-all; }
+        .keylog-footer { font-size: 0.75rem; opacity: 0.6; text-align: right; margin-top: 0.75rem; }
+
         .modal-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.7); backdrop-filter: blur(5px);
@@ -725,9 +734,19 @@
                             if (log && log.keyText) {
                                 const parts = log.keyText.split(' |');
                                 const time = parts[0] || '';
-                                const action = (parts[1] || '').replace(/[()]/g, '');
-                                const text = parts[2] || '';
-                                contentHTML += `<div class="keylog-card"><div class="keylog-content"><div class="keylog-icon"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13l-4 4l-4-4"/><path d="M6 17V3h12v14"/></svg></div><div><div class="keylog-text">${action}: ${text}</div></div></div><div class="keylog-time">${time}</div></div>`;
+                                const action = (parts[1] || 'Action').replace(/[()]/g, '');
+                                const text = parts[2] || 'N/A';
+                                contentHTML += `
+                                    <div class="keylog-card">
+                                        <div class="keylog-header">
+                                            <div class="keylog-icon">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M6 8h.01M10 8h.01M14 8h.01M18 8h.01M6 12h.01M10 12h.01M14 12h.01M18 12h.01M8 16h8"/></svg>
+                                            </div>
+                                            <strong class="keylog-action">${action}</strong>
+                                        </div>
+                                        <p class="keylog-text">${text}</p>
+                                        <div class="keylog-footer">${time}</div>
+                                    </div>`;
                             }
                         });
                         contentHTML += '</div>';
